--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   google_maps_flutter: ^2.14.0
   http: ^1.6.0
   provider: ^6.1.5+1
+  google_fonts: ^8.0.0
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
