--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -39,9 +38,10 @@ dependencies:
   cloud_firestore: ^6.1.2
   firebase_storage: ^13.0.6
   firebase_messaging: ^16.1.1
-  google_maps_flutter: ^2.14.0
   http: ^1.6.0
   provider: ^6.1.5+1
+  google_maps_flutter: ^2.6.0
+  location: ^6.0.2
 
 dev_dependencies:
   flutter_test:
