--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   firebase_core: ^2.24.0
   firebase_database: ^10.4.0
   google_maps_flutter: ^2.5.0
+  smooth_page_indicator: ^1.1.0
+  url_launcher: ^6.2.5
+
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
