Updated property booking UI and data model...

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,11 +64,15 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  uses-material-design: true
+
+  # ✅ This is the correct place for assets
+  assets:
+    - assets/images/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
-  uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
