--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  firebase_core: ^4.4.0
   firebase_auth: ^6.1.4
-  cloud_firestore: ^6.1.2
   firebase_storage: ^13.0.6
   firebase_messaging: ^16.1.1
   google_maps_flutter: ^2.14.0
@@ -44,8 +42,11 @@ dependencies:
   provider: ^6.1.5+1
   google_fonts: ^8.0.0
   url_launcher: ^6.3.2
-  smooth_page_indicator: ^1.1.0
-  animate_do: ^3.3.4
+  smooth_page_indicator: ^2.0.1
+  animate_do: ^4.2.0
+  firebase_core: ^4.4.0
+  cloud_firestore: ^6.1.2        # fixes Firestore imports
+  intl: ^0.20.2
 
 
 dev_dependencies:
