--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,19 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+# Node
+node_modules/
+
+# Flutter
+.dart_tool/
+build/
+
+# Android
+android/.gradle/
+android/app/build/
+
+# macOS/Linux/Windows builds
+ios/Pods/
+linux/build/
+macos/build/
+windows/build/
