--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,8 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/truck.png
-
+    - assets/icons/dump_active.png
+    - assets/icons/dump_closed.png
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
