--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  table_calendar: ^3.2.0
   animate_do: ^3.3.4
   google_fonts: ^6.1.0
   firebase_core: ^2.24.0
