--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   geolocator: ^14.0.2
+  image_picker: ^1.2.1
+  firebase_storage: ^11.6.5
+  cloud_firestore: ^4.17.5
 
 
 dev_dependencies:
