--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   google_maps_flutter: ^2.5.0
   smooth_page_indicator: ^1.1.0
   url_launcher: ^6.3.2
+  intl: ^0.20.2  # Change from ^0.19.0 to ^0.20.2
+  cloud_firestore: ^4.15.4
+
+
 
 
   # The following adds the Cupertino Icons font to your application.
