--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,8 @@ dependencies:
   url_launcher: ^6.3.2
   intl: ^0.20.2  # Change from ^0.19.0 to ^0.20.2
   cloud_firestore: ^4.15.4
-
-
+  flutter_stripe: ^10.1.0
+  http: ^1.2.0 # To talk to the payment server
 
 
   # The following adds the Cupertino Icons font to your application.
