--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,10 @@ dependencies:
   animate_do: ^3.3.4
   flutter_animate: ^4.5.0
   google_fonts: ^6.2.1
+  firebase_database: ^12.1.3
+  intl: ^0.19.0
+  geolocator: ^11.0.0
+
 
 
 dev_dependencies:
