--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,10 @@ dependencies:
   firebase_database: ^12.1.3
   intl: ^0.19.0
   geolocator: ^11.0.0
+  intl_phone_number_input: 0.7.5
+  pin_code_fields: ^8.0.1
+
+
 
 
 
