--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,30 +31,36 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  firebase_core: ^4.4.0
-  firebase_auth: ^6.1.4
-  cloud_firestore: ^6.1.2
-  firebase_storage: ^13.0.6
-  firebase_messaging: ^16.1.1
+
+  # Firebase Core - Use version compatible with all others
+  firebase_core: 4.4.0  # Changed from ^4.4.0
+
+  # Firebase Auth - Updated to work with firebase_app_check 0.4.1+4
+  firebase_auth: ^6.1.4  # Updated from ^5.5.1
+
+  # Firebase App Check
+
+  # Other Firebase services - update these to compatible versions
+  cloud_firestore: ^6.1.2  # This version works with firebase_core ^3.12.1
+  firebase_storage: ^13.0.6  # Check compatibility
+  firebase_database: ^12.1.3  # Check compatibility
+  firebase_messaging: ^16.1.1  # This version works
+
+  # Your other dependencies
   google_maps_flutter: ^2.14.0
   http: ^1.6.0
   provider: ^6.1.5+1
-  url_launcher: ^6.3.2
   smooth_page_indicator: ^1.1.0
   animate_do: ^3.3.4
   flutter_animate: ^4.5.0
   google_fonts: ^6.2.1
-  firebase_database: ^12.1.3
+  pin_code_fields: ^8.0.1
   intl: ^0.19.0
   geolocator: ^11.0.0
-  intl_phone_number_input: 0.7.5
-  pin_code_fields: ^8.0.1
-
-
-
+  url_launcher: ^6.2.4
+  intl_phone_number_input: ^0.7.5
+  firebase_app_check: 0.4.1+4
 
 
 dev_dependencies:
