Integrated major feature updates including real-time garbage tracking, property booking with Stripe, and reporting modules:
- **Garbage Tracking**: Implemented live truck tracking using Firebase Realtime Database with smooth marker animations, nearby truck alerts via Geolocator, and a Node.js-based fleet simulator.
- **Property Booking**: Added a complete venue booking flow with Stripe payment integration, interactive gallery with `AnimatedSwitcher`, and Google Maps navigation.
- **Illegal Dumping Reports**: Created a reporting screen for capturing and uploading photos to Firebase Storage with GeoPoint metadata and real-time upload progress.
- **Firebase & Infrastructure**:
    - Updated `pubspec.yaml` dependencies and standardized Firebase core/auth/messaging versions.
    - Configured essential Android `google-services` plugins and updated `targetSdk` to 34 for Storage compatibility.
    - Refined app routing and initialized assets for truck and dump point icons.
- **Project Structure**: Organized code into feature-based directories (`Property`, `Garbage_tracking`, `illegal_dumping`).

git push origin main

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,34 +33,38 @@ dependencies:
 
   cupertino_icons: ^1.0.8
 
-  # Firebase Core - Use version compatible with all others
-  firebase_core: 4.4.0  # Changed from ^4.4.0
+  # Firebase Core
+  firebase_core: ^4.4.0
 
-  # Firebase Auth - Updated to work with firebase_app_check 0.4.1+4
-  firebase_auth: ^6.1.4  # Updated from ^5.5.1
+  # Firebase Auth
+  firebase_auth: ^6.1.4
 
-  # Firebase App Check
+  # Firebase App Check - USE THIS VERSION
+  firebase_app_check: 0.4.1+4  # Not ^1.0.0
 
-  # Other Firebase services - update these to compatible versions
-  cloud_firestore: ^6.1.2  # This version works with firebase_core ^3.12.1
-  firebase_storage: ^13.0.6  # Check compatibility
-  firebase_database: ^12.1.3  # Check compatibility
-  firebase_messaging: ^16.1.1  # This version works
+  # Firebase Messaging
+  firebase_messaging: ^16.1.1
+
+  # Other Firebase services
+  cloud_firestore: ^6.1.2
+  firebase_storage: ^13.0.6
+  firebase_database: ^12.1.3
 
   # Your other dependencies
   google_maps_flutter: ^2.14.0
   http: ^1.6.0
   provider: ^6.1.5+1
-  smooth_page_indicator: ^1.1.0
-  animate_do: ^3.3.4
+  smooth_page_indicator: ^2.0.1
+  animate_do: ^4.2.0
   flutter_animate: ^4.5.0
-  google_fonts: ^6.2.1
-  pin_code_fields: ^8.0.1
-  intl: ^0.19.0
-  geolocator: ^11.0.0
+  google_fonts: ^8.0.2
+  pin_code_fields: ^9.0.0
+  intl: ^0.20.2
+  geolocator: ^14.0.2
   url_launcher: ^6.2.4
   intl_phone_number_input: ^0.7.5
-  firebase_app_check: 0.4.1+4
+  flutter_stripe: ^12.3.0
+  image_picker: ^1.2.1
 
 
 dev_dependencies:
@@ -79,11 +83,17 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  uses-material-design: true
 
+  # ✅ This is the correct place for assets
+  assets:
+    - assets/images/
+    - assets/icons/truck.png
+    - assets/icons/dump_active.png
+    - assets/icons/dump_closed.png
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
-  uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
@@ -115,3 +125,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
