--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   image_picker: ^1.2.1
   firebase_storage: ^11.6.5
   cloud_firestore: ^4.17.5
+  flutter_polyline_points: ^2.0.0
 
 
 dev_dependencies:
